🚀 added map, readme, google forms

--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -37,5 +37,9 @@ h2 {
 }
 
 .leaflet-container {
-  height: 600px;
+  height: 100%;
+}
+
+.leaflet-control-attribution.leaflet-control {
+  display: none;
 }
